--- a/liblwgeom/liblwgeom.h.in
+++ b/liblwgeom/liblwgeom.h.in
@@ -331,15 +331,9 @@ typedef struct lwvarlena_t
 * internally with PgSQL. See SET_VARSIZE_4B / VARSIZE_4B in
 * PGSRC/src/include/postgres.h for details.
 */
-#ifdef WORDS_BIGENDIAN
-#define LWSIZE_GET(varsize) ((varsize) & 0x3FFFFFFF)
-#define LWSIZE_SET(varsize, len) ((varsize) = ((len) & 0x3FFFFFFF))
+#define LWSIZE_GET(varsize) (ntohl(varsize) & 0x3FFFFFFF)
+#define LWSIZE_SET(varsize, len) ((varsize) = htonl((len) & 0x3FFFFFFF))
 #define IS_BIG_ENDIAN 1
-#else
-#define LWSIZE_GET(varsize) (((varsize) >> 2) & 0x3FFFFFFF)
-#define LWSIZE_SET(varsize, len) ((varsize) = (((uint32_t)(len)) << 2))
-#define IS_BIG_ENDIAN 0
-#endif
 
 /******************************************************************/
 
