--- a/postgis/postgis.sql.in
+++ b/postgis/postgis.sql.in
@@ -69,15 +69,15 @@ DO $$
 DECLARE
 	pgalog text;
 BEGIN
-	SHOW pgaudit.log INTO pgalog;
-	RAISE DEBUG 'pgaudit is installed, pgaudit.log is set to ''%''', pgalog;
-	IF pg_catalog.lower(pgalog) != 'none'
-	THEN
-		RAISE EXCEPTION 'PostGIS installation stopped: pgaudit.log is set to ''%''. Set pgaudit.log to ''none'' before installing PostGIS. You may re-enable pgaudit after installation is complete.', pgalog;
-	END IF;
-EXCEPTION
-	WHEN undefined_object THEN
-		RAISE DEBUG 'pgaudit is not installed';
+--	SHOW pgaudit.log INTO pgalog;
+--	RAISE DEBUG 'pgaudit is installed, pgaudit.log is set to ''%''', pgalog;
+--	IF pg_catalog.lower(pgalog) != 'none'
+--	THEN
+--		RAISE EXCEPTION 'PostGIS installation stopped: pgaudit.log is set to ''%''. Set pgaudit.log to ''none'' before installing PostGIS. You may re-enable pgaudit after installation is complete.', pgalog;
+--	END IF;
+--EXCEPTION
+--	WHEN undefined_object THEN
+--		RAISE DEBUG 'pgaudit is not installed';
 END;
 $$;
 
@@ -2050,7 +2050,7 @@ CREATE TABLE spatial_ref_sys (
 	 auth_srid integer,
 	 srtext varchar(2048),
 	 proj4text varchar(2048)
-);
+) DISTRIBUTED REPLICATED;
 
 -----------------------------------------------------------------------
 -- POPULATE_GEOMETRY_COLUMNS()
