--- a/raster/rt_pg/rtpostgis.sql.in
+++ b/raster/rt_pg/rtpostgis.sql.in
@@ -93,12 +93,24 @@ CREATE OR REPLACE FUNCTION raster_out(raster)
     AS 'MODULE_PATHNAME','RASTER_out'
     LANGUAGE 'c' IMMUTABLE STRICT PARALLEL SAFE;
 
+CREATE OR REPLACE FUNCTION raster_recv(internal)
+    RETURNS raster
+    AS 'MODULE_PATHNAME','RASTER_recv'
+    LANGUAGE 'c' IMMUTABLE STRICT;
+
+CREATE OR REPLACE FUNCTION raster_send(raster)
+    RETURNS bytea
+    AS 'MODULE_PATHNAME','RASTER_send'
+    LANGUAGE 'c' IMMUTABLE STRICT;
+
 -- Availability: 2.0.0
 CREATE TYPE raster (
     alignment = double,
     internallength = variable,
     input = raster_in,
     output = raster_out,
+    send = raster_send,
+    receive = raster_recv,
     storage = extended
 );
 
@@ -292,7 +304,7 @@ CREATE OR REPLACE FUNCTION st_summary(rast raster)
 		ELSE
 			msg := msg || 'bands ';
 		END IF;
-		msg := msg || 'and extent of ' || extent;
+		msg := msg || 'and extent of ' || extent::text;
 
 		IF
 			round(metadata.skewx::numeric, 10) <> round(0::numeric, 10) OR
@@ -7812,12 +7824,10 @@ CREATE OR REPLACE FUNCTION AddRasterConstraints (
 						RAISE NOTICE 'Adding alignment constraint';
 						rtn :=  @extschema@._add_raster_constraint_alignment(schema, $2, $3);
 					WHEN kw IN ('regular_blocking', 'regularblocking') THEN
-						RAISE NOTICE 'Adding coverage tile constraint required for regular blocking';
-						rtn :=  @extschema@._add_raster_constraint_coverage_tile(schema, $2, $3);
-						IF rtn IS NOT FALSE THEN
-							RAISE NOTICE 'Adding spatially unique constraint required for regular blocking';
-							rtn :=  @extschema@._add_raster_constraint_spatially_unique(schema, $2, $3);
-						END IF;
+						-- Greenplum doesn't support EXCLUSION CONSTRAINT (exclude)
+						--  so spatially unique is not supportted up to now, 28 Jan 2015
+						RAISE EXCEPTION 'Unable to add constraint: %, because Greenplum does not support exclusion constraint (EXCLUDE), so spatially unique constraints will be ignored. Skipping', quote_literal(constraints[x]);
+						rtn := FLASE;
 					WHEN kw IN ('num_bands', 'numbands') THEN
 						RAISE NOTICE 'Adding number of bands constraint';
 						rtn :=  @extschema@._add_raster_constraint_num_bands(schema, $2, $3);
@@ -8251,6 +8261,32 @@ CREATE OR REPLACE FUNCTION _overview_constraint(ov raster, factor integer, refsc
 	$$ SELECT COALESCE((SELECT TRUE FROM @extschema@.raster_columns WHERE r_table_catalog = current_database() AND r_table_schema = $3 AND r_table_name = $4 AND r_raster_column = $5), FALSE) $$
 	LANGUAGE 'sql' STABLE
 	COST 100;
+
+-- We re-write this function, otherwise Greenplum will complain:
+--      function cannot execute on segment because it accesses relation "public.raster_columns"
+CREATE OR REPLACE FUNCTION _overview_constraint(ov raster, factor integer, refschema name, reftable name, refcolumn name)
+    RETURNS boolean AS
+    $$
+    SELECT COALESCE((
+    SELECT TRUE
+    FROM
+        pg_class c,
+        pg_attribute a,
+        pg_type t,
+        pg_namespace n
+    WHERE t.typname = 'raster'::name
+        AND n.nspname = $3
+        AND c.relname = $4
+        AND a.attname = $5
+        AND a.attisdropped = false
+        AND a.atttypid = t.oid
+        AND a.attrelid = c.oid
+        AND c.relnamespace = n.oid
+        AND c.relkind = ANY(ARRAY['r'::char, 'v'::char, 'm'::char, 'f'::char])
+        AND NOT pg_is_other_temp_schema(c.relnamespace)
+    ), FALSE)
+    $$ LANGUAGE 'sql' STABLE
+    COST 100;
 
 -- Changed: 3.1.2
 CREATE OR REPLACE FUNCTION _overview_constraint_info(
